src/test/ui/borrowck/borrowck-union-move-assign.nll.stderr
error[E0382]: use of moved value: `u`
  --> $DIR/borrowck-union-move-assign.rs:17:21
   |
LL |             let a = u.a;
   |                     --- value moved here
LL |             let a = u.a; //~ ERROR use of moved value: `u.a`
   |                     ^^^ value used here after move
   |
   = note: move occurs because `u` has type `U`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
